# arxiv-firehose

./: .gitignore
fetcher/: .gitignore  AGENTS.md  README.md  dirsql.config.py  justfile  pyproject.toml
fetcher/deploy/: README.md  fetcher-api.service  fetcher-fetch.service  fetcher-fetch.timer
fetcher/labels/: README.md
fetcher/labels/is-about-control/: _schema.json
fetcher/labels/is-about-control/alignment-survey-2407.16216/: abstract.txt  record.json
fetcher/labels/is-about-control/cfg-2207.12598/: abstract.txt  record.json
fetcher/labels/is-about-control/ctg-2405.01490/: record.json
fetcher/labels/is-about-control/dola-2309.03883/: abstract.txt  record.json
fetcher/labels/is-about-control/dpo-2305.18290/: record.json
fetcher/labels/is-about-control/dpo-vs-ppo-2404.10719/: abstract.txt  record.json
fetcher/labels/is-about-control/eagle-2401.15077/: record.json
fetcher/labels/is-about-control/eagle2-2406.16858/: abstract.txt  record.json
fetcher/labels/is-about-control/glgnn-2406.10863/: record.json
fetcher/labels/is-about-control/model-edit-forget-2401.07453/: record.json
fetcher/labels/is-about-control/ntire-sr-2404.09790/: abstract.txt  record.json
fetcher/labels/is-about-control/plug-prompts-2404.05143/: abstract.txt  record.json
fetcher/labels/is-about-control/prefix-tuning-2101.00190/: record.json
fetcher/labels/is-about-control/qlora-2305.14314/: abstract.txt  record.json
fetcher/labels/is-about-control/rag-survey-2410.12837/: record.json
fetcher/labels/is-about-control/repe-2310.01405/: record.json
fetcher/labels/is-about-control/scale-gnn-2411.19392/: abstract.txt
fetcher/labels/is-about-control/unified-edit-2403.14236/: abstract.txt  record.json
fetcher/labels/is-about-control/vfi-motion-2501.03699/: record.json
fetcher/labels/is-about-steering-vector/: _schema.json
fetcher/labels/is-about-steering-vector/actadd-2308.10248/: abstract.txt  record.json
fetcher/labels/is-about-steering-vector/alignment-survey-2407.16216/: record.json
fetcher/labels/is-about-steering-vector/caa-2312.06681/: abstract.txt  record.json
fetcher/labels/is-about-steering-vector/cfg-2207.12598/: record.json
fetcher/labels/is-about-steering-vector/ctg-2405.01490/: abstract.txt  record.json
fetcher/labels/is-about-steering-vector/denoising-2412.04727/: abstract.txt  record.json
fetcher/labels/is-about-steering-vector/dexmanip-2410.21845/: abstract.txt
fetcher/labels/is-about-steering-vector/dola-2309.03883/: record.json
fetcher/labels/is-about-steering-vector/dpo-2305.18290/: record.json
fetcher/labels/is-about-steering-vector/dpo-vs-ppo-2404.10719/: record.json
fetcher/labels/is-about-steering-vector/model-edit-forget-2401.07453/: abstract.txt  record.json
fetcher/labels/is-about-steering-vector/plug-prompts-2404.05143/: record.json
fetcher/labels/is-about-steering-vector/prefix-tuning-2101.00190/: abstract.txt  record.json
fetcher/labels/is-about-steering-vector/refusal-direction-2406.11717/: abstract.txt  record.json
fetcher/labels/is-about-steering-vector/repe-2310.01405/: abstract.txt
fetcher/labels/is-about-steering-vector/sae-steering-2501.17148/: record.json
fetcher/labels/is-about-steering-vector/scale-gnn-2411.19392/: record.json
fetcher/labels/is-about-steering-vector/unified-edit-2403.14236/: record.json
fetcher/labels/is-image-enhancement/: _schema.json
fetcher/labels/is-image-enhancement/authface-2410.09864/: abstract.txt  record.json
fetcher/labels/is-local-llm-relevant/: _schema.json
fetcher/labels/is-survey/: _schema.json
fetcher/prompts/is-about-steering-vector/: dspy.json  history.jsonl  meta.json  prompt.jinja
fetcher/prompts/is-image-enhancement/: dspy.json  history.jsonl  meta.json  prompt.jinja
fetcher/prompts/is-local-llm-relevant/: dspy.json  history.jsonl  meta.json  prompt.jinja
fetcher/prompts/is-survey/: dspy.json  history.jsonl  meta.json  prompt.jinja
fetcher/src/fetcher/: __init__.py  api.py  classify.py  classify_test.py  cli.py  cli_test.py  config.py  convert.py  convert_test.py  download.py  download_test.py  fetch.py  fetch_test.py  paths.py  paths_test.py  serve.py  serve_test.py  status.py  sync.py  sync_test.py
fetcher/src/fetcher/classify/: run.py  (+5 more)
fetcher/tests/integration/: classify_test.py  conftest.py  fetch_test.py  pull_test.py  render_markdown_test.py  run_test.py  sync_metadata_test.py
(+180 files in other folders)
