[project]
name = "fetcher"
version = "0.1.0"
description = "Maintain a local mirror of arxiv papers as markdown (plus metadata)."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kevin Scott", email = "151596+thekevinscott@users.noreply.github.com" }
]
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.6",
    "cachetta>=0.6.3",
    "arxiv2markdown~=0.1.0",
    "pypandoc-binary>=1.13",
]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.16"]
s3 = ["boto3>=1.34"]

[project.scripts]
fetcher = "fetcher.cli:app"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Unit tests are colocated with source (src/fetcher/*_test.py); keep them
# and any conftest.py out of the published sdist and wheel.
source-exclude = ["**/*_test.py", "**/test_*.py", "**/conftest.py"]
wheel-exclude = ["**/*_test.py", "**/test_*.py", "**/conftest.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-describe>=3.1.0",
]

[tool.pytest.ini_options]
# Unit tests are colocated with source (src/fetcher/foo_test.py);
# integration tests live under tests/integration/.
testpaths = ["src", "tests"]
python_files = ["*_test.py", "test_*.py"]
# pytest-describe nests cases as `it_*` functions inside `describe_*` blocks.
python_functions = ["test_*", "it_*"]
addopts = "-ra"
