[project]
name = "fetcher"
version = "0.1.0"
description = "Maintain a local mirror of arxiv papers as markdown (plus metadata), with optional auto-classification."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Kevin Scott", email = "151596+thekevinscott@users.noreply.github.com" }
]
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.6",
    "cachetta>=0.6.6,<0.7",
    "arxiv2markdown~=0.1.0",
    "pypandoc-binary>=1.13",
    "pymupdf4llm>=1.27.2.3",
    "coaxer>=0.3.13,<0.4",
    "dirsql>=0.3.12",
    "fastapi>=0.118",
    "uvicorn>=0.40",
    # Embedding + semantic search. model2vec provides fast CPU-only
    # static embeddings (potion-base-8M, 256-dim); duckdb hosts the
    # embeddings table + array_cosine_distance for /search.
    "model2vec>=0.3",
    "duckdb>=1.1",
    # duckdb's Python client needs pytz to hand TIMESTAMPTZ values back
    # to Python; without it, /search SQL touching tz-aware timestamps
    # (e.g. try_strptime with %z) crashes on fetch.
    "pytz>=2024.1",
]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.16"]
s3 = ["boto3>=1.34"]

[project.scripts]
fetcher = "fetcher.cli:app"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Unit tests are colocated with source (src/fetcher/*_test.py); keep them
# and any conftest.py out of the published sdist and wheel.
source-exclude = ["**/*_test.py", "**/test_*.py", "**/conftest.py"]
wheel-exclude = ["**/*_test.py", "**/test_*.py", "**/conftest.py"]

[tool.uv]
# Per-package override for the global 3-day supply-chain delay (see
# ~/.config/uv/uv.toml). cachetta is maintained by the same author as this
# project; the staleness mitigation doesn't add value here, and 0.6.6
# shipped the `hashed=True` API we depend on.
exclude-newer-package = { cachetta = "0 days" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-describe>=3.1.0",
]

[tool.pytest.ini_options]
# Unit tests are colocated with source (src/fetcher/foo_test.py);
# integration tests live under tests/integration/.
testpaths = ["src", "tests"]
python_files = ["*_test.py", "test_*.py"]
# pytest-describe nests cases as `it_*` functions inside `describe_*` blocks.
python_functions = ["test_*", "it_*"]
# Coverage floor: the CI guardrail. Today's number is the floor; raise
# it (never lower) as gaps close. Source-only -- the _test.py files
# carry test code, not production code, and would inflate the figure.
addopts = "-ra --cov=fetcher --cov-fail-under=87 --cov-report=term-missing"

[tool.coverage.run]
source = ["src/fetcher"]
omit = ["*/*_test.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
